# Spark_Core_Experiments

./: README.md  docker-compose.yml
app/: Dockerfile  Makefile  pyproject.toml  requirements.txt
app/conf/: log4j.properties
app/scripts/: init_mongo.sh
app/src/: main.py
app/src/config/: mongodb.py  spark.py  url.py
app/src/modules/: exceptions.py
app/src/services/: aggregation.py  analyze.py  dataframe.py  mongodb.py  session.py  validate.py
app/tests/: conftest.py  test_data_analyzer.py  test_exceptions.py  test_session.py
