[tool.poetry]
name = "src"
version = "0.1.0"
description = "spark datbase test"
authors = ["seilylook <seilylook@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
isort = "^5.13.2"
wget = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
